2011-01-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: ensure example are separated with empty lines in the input
	* doc/automake.texi (Extending aclocal, Emacs Lisp, Rebuilding)
	(API Versioning, Renamed Objects, Multiple Outputs): Add empty
	lines before `@example' and after `@end example' lines, so info
	output is rendered correctly, and a following @noindent honored.
	Report by Stefano Lattarini.

2011-01-15  Jim Meyering <meyering@redhat.com>

	tests: fix comment typo
	* tests/substref.test: Fix grammar in a comment.

2011-01-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in two texinfo tests
	* tests/txinfo.test ($required): Add 'makeinfo'.
	* tests/txinfo8.test: Create a dummy 'textutils.info' file, so
	that make won't try to run makeinfo (which could be unavailable)
	to build it.
	Found by NixOS Hydra, reported by Ralf Wildenhues.

2011-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid testsuite failures due to Autoconf Fortran change.
	Autoconf v2.68-21-g727ce95 causes AC_F77_LIBRARY_LDFLAGS to
	require computing the canonical host name.  Ensure config.guess
	and config.sub files are present for respective checks.
	* tests/compile_f_c_cxx.test: Add stub files.
	* tests/flibs.test: Likewise.
	* tests/fort4.test: Use $AUTOMAKE -a for installing files.

2011-01-12   Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: clustered '-d' not recognized in YFLAGS
	This change fixes automake bug#7828.
	* doc/automake.texi (Yacc and Lex): Document that automake
	recognizes '-d' in AM_YFLAGS only if it's not clustered with
	other options.
	From a report by Юрий Пухальский.

2011-01-10   Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add checks on automatically-distributed files
	Related to automake bug#7819.
	* tests/autodist.test: New test.
	* tests/autodist-subdir.test: Likewise.
	* tests/autodist-acconfig.test: Likewise.
	* tests/autodist-acconfig-no-subdir.test: Likewise.