@@ -41,14 +41,19 @@ foo.log: bar.log
 bar.log: baz.log
 END
 
+# foo.test and bar.test sleep to ensure their logs are always strictly newer
+# than the logs of their prerequisites, for HP-UX make.  The quoting pleases
+# maintainer-check.
 cat >>foo.test <<'END'
 #! /bin/sh
 echo "this is $0"
+sleep '1'
 exit 0
 END
 cat >>bar.test <<'END'
 #! /bin/sh
 echo "this is $0"
+sleep '1'
 exit 99
 END
 cat >>baz.test <<'END'
