@@ -1,3 +1,9 @@
+2011-01-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix parallel-tests.test failure with HP-UX make.
+	* tests/parallel-tests.test: Sleep inside inner tests, so logs
+	are newer than logs of tests they depend on, for HP-UX make.
+
 2011-01-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	docs: ensure example are separated with empty lines in the input
